--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: GillespieSSA
 Title: Gillespie's Stochastic Simulation Algorithm (SSA)
-Version: 0.4-0
-Date: 2007-11-12
+Version: 0.5-0
+Date: 2007-10-19
 Author: Mario Pineda-Krch <mpineda@ucdavis.edu>
 Maintainer: Mario Pineda-Krch <mpineda@ucdavis.edu>
 Depends: R (>= 2.5.1)
-Description: GillespieSSA provides a simple to use, intuitive, and extensible interface to several stochastic simulation algorithms for generating simulated trajectories of finite population continuous-time model. Currently it implements the Gillespie's exact stochastic simulation algorithm (Direct method) and several approximate methods (Explicit tau-leap, Binomial tau-leap, and Optimized tau-leap). The package also contains a library of template models that can easily be customized and extended.
+Description: GillespieSSA provides a simple to use, intuitive, and extensible interface to several stochastic simulation algorithms for generating simulated trajectories of finite population continuous-time model. Currently it implements Gillespie's exact stochastic simulation algorithm (Direct method) and several approximate methods (Explicit tau-leap, Binomial tau-leap, and Optimized tau-leap). The package also contains a library of template models that can be run as demo models and can easily be customized and extended. Currently the following models are included, decaying-dimerization reaction set, linear chain system, logistic growth model, Lotka predator-prey model, Rosenzweig-MacArthur predator-prey model, Kermack-McKendrick SIR model, and a metapopulation SIRS model.}
 License: GPL (>= 3)
 URL: http://pineda-krch.com/gillespiessa
-Packaged: Fri Oct 12 21:50:13 2007; pineda
+Packaged: Fri Oct 19 08:26:14 2007; pineda
