--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,29 @@
 Package: GillespieSSA
 Title: Gillespie's Stochastic Simulation Algorithm (SSA)
-Version: 0.5-3
-Date: 2008-01-17
-Author: Mario Pineda-Krch <mpineda@ucdavis.edu>
-Maintainer: Mario Pineda-Krch <mpineda@ucdavis.edu>
+Version: 0.5-4
+Date: 2010-08-16
+Author: Mario Pineda-Krch <mpineda@math.ualbeta.ca>
+Maintainer: ORPHANED
 Depends: R (>= 2.0.0)
-Description: GillespieSSA provides a simple to use, intuitive, and extensible interface to several stochastic simulation algorithms for generating simulated trajectories of finite population continuous-time model. Currently it implements Gillespie's exact stochastic simulation algorithm (Direct method) and several approximate methods (Explicit tau-leap, Binomial tau-leap, and Optimized tau-leap). The package also contains a library of template models that can be run as demo models and can easily be customized and extended. Currently the following models are included, decaying-dimerization reaction set, linear chain system, logistic growth model, Lotka predator-prey model, Rosenzweig-MacArthur predator-prey model, Kermack-McKendrick SIR model, and a metapopulation SIRS model.}
+Description: GillespieSSA provides a simple to use, intuitive, and
+        extensible interface to several stochastic simulation
+        algorithms for generating simulated trajectories of finite
+        population continuous-time model. Currently it implements
+        Gillespie's exact stochastic simulation algorithm (Direct
+        method) and several approximate methods (Explicit tau-leap,
+        Binomial tau-leap, and Optimized tau-leap). The package also
+        contains a library of template models that can be run as demo
+        models and can easily be customized and extended. Currently the
+        following models are included, decaying-dimerization reaction
+        set, linear chain system, logistic growth model, Lotka
+        predator-prey model, Rosenzweig-MacArthur predator-prey model,
+        Kermack-McKendrick SIR model, and a metapopulation SIRS model.
 License: GPL (>= 3)
 URL: http://pineda-krch.com/gillespiessa
-Packaged: Fri Feb  1 02:15:39 2008; pineda
+Packaged: 2010-08-16 17:09:04 UTC; mpineda
+Repository: CRAN
+Date/Publication: 2012-01-15 12:32:46
+NeedsCompilation: no
+X-CRAN-Original-Maintainer: Mario Pineda-Krch <mpineda@math.ualbeta.ca>
+X-CRAN-Comment: Orphaned on 2014-01-12 as maintainer address
+        <mpineda@math.ualbeta.ca> bounced.
