clean up notes and warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,10 @@ export(ssa.direct)
 export(ssa.em)
 export(ssa.etl)
 export(ssa.otl)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
+importFrom(stats,rpois)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,setNames)
+importFrom(utils,flush.console)
