--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,5 +29,7 @@ importFrom(stringr,str_count)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
+importFrom(tibble,lst)
+importFrom(tibble,tibble)
 importFrom(utils,flush.console)
 useDynLib(fastgssa)
