allow to store the buffer and add parameter for hardcoding the parameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ssa_etl)
 importFrom(RcppXPtrUtils,cppXPtr)
 importFrom(assertthat,assert_that)
 importFrom(dynutils,is_sparse)
+importFrom(dynutils,safe_tempdir)
 importFrom(purrr,"%>%")
 importFrom(purrr,discard)
 importFrom(purrr,imap)
