--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(ssa_em)
 export(ssa_etl)
 importFrom(RcppXPtrUtils,cppXPtr)
 importFrom(assertthat,assert_that)
+importFrom(dplyr,first)
 importFrom(dynutils,is_sparse)
 importFrom(dynutils,safe_tempdir)
 importFrom(purrr,"%>%")
