compile into multiple propensity funs, create separate output objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(ssa_btl)
 export(ssa_direct)
 export(ssa_em)
 export(ssa_etl)
+export(ssa_plot)
 importFrom(RcppXPtrUtils,cppXPtr)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,first)
