add imports for ssa_plot

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,15 +28,16 @@ License: GPL (>= 3)
 LazyData: TRUE
 Imports:
     assertthat,
+    dplyr,
     dynutils,
     purrr,
     Rcpp (>= 0.12.3),
     RcppXPtrUtils,
     stringr,
-    tibble
+    tibble,
+    tidyr
 Suggests: 
-    testthat,
-    dplyr
+    testthat
 LinkingTo: Rcpp
 RoxygenNote: 6.1.1
 Encoding: UTF-8
