--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,13 @@ export(ssa_etl)
 export(ssa_plot)
 importFrom(RcppXPtrUtils,cppXPtr)
 importFrom(assertthat,assert_that)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,first)
 importFrom(dynutils,is_sparse)
 importFrom(dynutils,safe_tempdir)
+importFrom(ggplot,aes)
+importFrom(ggplot,facet_wrap)
+importFrom(ggplot,geom_path)
 importFrom(purrr,"%>%")
 importFrom(purrr,discard)
 importFrom(purrr,imap)
@@ -36,5 +40,6 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
+importFrom(tidyr,gather)
 importFrom(utils,flush.console)
 useDynLib(fastgssa)
