--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,9 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,first)
 importFrom(dynutils,is_sparse)
 importFrom(dynutils,safe_tempdir)
-importFrom(ggplot,aes)
-importFrom(ggplot,facet_wrap)
-importFrom(ggplot,geom_path)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_path)
 importFrom(purrr,"%>%")
 importFrom(purrr,discard)
 importFrom(purrr,imap)
