update documentation and imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,15 +7,18 @@ export(ssa_direct)
 export(ssa_em)
 export(ssa_etl)
 export(ssa_plot)
-importFrom(RcppXPtrUtils,cppXPtr)
+importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,first)
+importFrom(dplyr,last)
 importFrom(dynutils,is_sparse)
 importFrom(dynutils,safe_tempdir)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_path)
+importFrom(ggplot2,ggplot)
+importFrom(methods,is)
 importFrom(purrr,"%>%")
 importFrom(purrr,discard)
 importFrom(purrr,imap)
