improve fastgssa documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ importFrom(dplyr,first)
 importFrom(dplyr,last)
 importFrom(dynutils,is_sparse)
 importFrom(dynutils,safe_tempdir)
-importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,ggplot)
