allow to combine functions into one

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,pmap)
 importFrom(purrr,set_names)
+importFrom(readr,write_lines)
 importFrom(stringr,str_count)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
