--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(stringr,str_count)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
+importFrom(stringr,str_split)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
