--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ssa_direct)
 export(ssa_em)
 export(ssa_etl)
 export(ssa_plot)
+importFrom(Matrix,Matrix)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
