--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,4 +43,4 @@ importFrom(stringr,str_split)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
-useDynLib(fastgssa)
+useDynLib(gillespie)
