--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,first)
 importFrom(dplyr,last)
+importFrom(dplyr,mutate)
 importFrom(dynutils,is_sparse)
 importFrom(dynutils,safe_tempdir)
 importFrom(methods,is)
