--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,10 @@ importFrom(purrr,"%>%")
 importFrom(purrr,discard)
 importFrom(purrr,imap)
 importFrom(purrr,invoke)
+importFrom(purrr,is_scalar_character)
+importFrom(purrr,is_scalar_integer)
+importFrom(purrr,is_scalar_logical)
+importFrom(purrr,is_scalar_numeric)
 importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
