--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,9 +23,9 @@ importFrom(purrr,discard)
 importFrom(purrr,imap)
 importFrom(purrr,invoke)
 importFrom(purrr,is_scalar_character)
+importFrom(purrr,is_scalar_double)
 importFrom(purrr,is_scalar_integer)
 importFrom(purrr,is_scalar_logical)
-importFrom(purrr,is_scalar_numeric)
 importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
