--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ importFrom(purrr,map_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,pmap)
 importFrom(purrr,set_names)
+importFrom(purrr,walk)
 importFrom(readr,write_lines)
 importFrom(rlang,is_formula)
 importFrom(stringr,str_count)
