--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Authors@R: c(
 Description: A fast, scalable, and versatile framework for simulating large systems with 
   Gillespie's Stochastic Simulation Algorithm ('SSA'). It is the spiritual successor of 
   'GillespieSSA', but written entirely in Rcpp with large scale systems in mind, to make
-  it blazingly fast. The SSA methods currently implemented are: Direct, Explicit
+  it blazingly fast. The SSA methods currently implemented are: Exact, Explicit
   tau-leaping ('ETL'), and the Binomial tau-leaping ('BTL').
 License: GPL (>= 3)
 LazyData: TRUE
