--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(ode_em)
 export(reaction)
 export(ssa)
 export(ssa_btl)
-export(ssa_direct)
 export(ssa_etl)
+export(ssa_exact)
 importFrom(Matrix,Matrix)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
