cast effect if it is integerish

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(purrr,set_names)
 importFrom(purrr,walk)
 importFrom(readr,write_lines)
 importFrom(rlang,is_formula)
+importFrom(rlang,is_integerish)
 importFrom(stringr,str_count)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
