split up simulation function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(ssa_btl)
 export(ssa_etl)
 export(ssa_exact)
 importFrom(Matrix,Matrix)
+importFrom(Rcpp,cpp_object_initializer)
+importFrom(Rcpp,loadModule)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
