move compile function to separate file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,first)
 importFrom(dplyr,last)
 importFrom(dplyr,mutate)
+importFrom(dynutils,"%all_in%")
+importFrom(dynutils,inherit_default_params)
 importFrom(dynutils,is_sparse)
 importFrom(dynutils,safe_tempdir)
 importFrom(methods,is)
