--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(dynutils,inherit_default_params)
 importFrom(dynutils,is_sparse)
 importFrom(dynutils,safe_tempdir)
 importFrom(methods,is)
+importFrom(methods,new)
 importFrom(purrr,"%>%")
 importFrom(purrr,discard)
 importFrom(purrr,imap)
