rename package again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,4 +54,4 @@ importFrom(stringr,str_split)
 importFrom(tibble,lst)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
-useDynLib(gillespie)
+useDynLib(GillespieSSA2)
