--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(Matrix,Matrix)
 importFrom(Rcpp,cpp_object_initializer)
 importFrom(Rcpp,loadModule)
 importFrom(Rcpp,sourceCpp)
+importFrom(RcppXPtrUtils,cppXPtr)
 importFrom(assertthat,assert_that)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,first)
