--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(ssa)
 export(ssa_btl)
 export(ssa_etl)
 export(ssa_exact)
-importFrom(Matrix,Matrix)
+importFrom(Matrix,sparseMatrix)
 importFrom(Rcpp,cpp_object_initializer)
 importFrom(Rcpp,loadModule)
 importFrom(Rcpp,sourceCpp)
