--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,13 @@ Authors@R: c(
       email = "rcannood@gmail.com", 
       role = c("aut", "cre"),
       comment = c(ORCID = "0000-0003-3641-729X")
+    ),
+    person(
+      "Wouter", 
+      "Saelens", 
+      email = "wouter.saelens@gmail.com", 
+      role = c("aut"), 
+      comment = c(ORCID = "0000-0002-7114-6248")
     )
   )
 Description: A fast, scalable, and versatile framework for simulating large 
