--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -24,13 +24,13 @@ jobs:
         run: |
           BRANCH="${GITHUB_REF#refs/heads/}"
           docker build -t dynbuild -f docker/Dockerfile --build-arg GITHUB_PAT=${{ secrets.PAT }} --build-arg=GITHUB_BRANCH=$BRANCH .
-          docker tag dynbuild $GITHUB_REPOSITORY:$BRANCH
+          docker tag dynbuild rcannood/gillespiessa2:$BRANCH
           if [[ $BRANCH == "master" ]] ; then
-            # docker tag dynbuild $GITHUB_REPOSITORY:$TAG
-            docker tag dynbuild $GITHUB_REPOSITORY:latest
+            # docker tag dynbuild rcannood/gillespiessa2:$TAG
+            docker tag dynbuild rcannood/gillespiessa2:latest
           fi
 
       - name: Push
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker push $GITHUB_REPOSITORY
+          docker push rcannood/gillespiessa2
